changed width of images on media query min-width 700px to stop images stretching on screen resize

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -549,45 +549,45 @@ form textarea {
 
     /* setup.html */
     .workspace-image {
-        width: 50%;
+        width: 315px;
         margin: auto;
         display: block;
     }
 
     .computer-image {
-        width: 50%;
+        width: 315px;
         margin: auto;
         display: block;
     }
 
     .plant-image {
-        width: 50%;
+        width: 315px;
         margin: auto;
         display: block;
     }
 
     /* course.html */
     .cost-image {
-        width: 50%;
+        width: 315px;
         margin: auto;
         display: block;
     }
 
     .linkedin-image {
-        width: 50%;
+        width: 315px;
         margin: auto;
         display: block;
     }
 
     .study-image {
-        width: 50%;
+        width: 315px;
         margin: auto;
         display: block;
     }
 
     /* community.html */
     .google-image {
-        width: 50%;
+        width: 315px;
         margin: auto;
         display: block;
     }
